<resources>
    <string name="app_name">Crossword Sinhala</string>

    <!--    menu page   -->
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="choose_a_puzzle">Choose a Puzzle</string>

    <!--    action menu     -->
    <string name="help_action_menu">Help</string>
    <string name="about_us_action_menu">About</string>

    <!--    puzzle solving page     -->
    <string name="across">හරහට</string>
    <string name="down">පහළට</string>
    <string name="check_answers">Check Answers</string>
    <string name="puzzle_box_speakable_text">Puzzle box</string>

    <!--    instructions page   -->
    <string name="help_topic_string">ක්‍රීඩා කිරීමට උපදෙස් </string>
    <string name="how_to_description">

        පළමුව විසඳීම සඳහා ප්‍රෙහේලිකා මෙනුවෙන් ප්‍රෙහේලිකාවක් තෝරා ගන්න.\n\n
        ඉන්පසු ඔබට ප්‍රෙහේලිකාව විසඳීමේ පිටුව දිස් වේ.\n\n
        ප්‍රෙහේලිකාව විසඳීමට අවශ්‍ය ඉඟි ලබා ගැනීමට \"හරහට\" සහ \"පහළට\" බොත්තම් භාවිතා කරන්න\n\n
        කොටු පිරවීමේදී,\n
        පිරවීමට අවශ්‍ය කොටුව මත ටච් කරන්න. එවිට යතුරු පුවරුව දිස් වේ.\n
        සිංහල අකුරු පමණක් භාවිත කරන්න.\n
        එක් කොටුවක එක් අකුරක් පමණක් පුරවන්න.\n\n
        එක් කොටුවක සිට තවත් කොටුවකට යාමට මෙම ඊතල ➡️⬇️ සහිත බොත්තම් භාවිත කරන්න.\n\n
        පිළිතුරු පරික්ෂ කිරීමට \"Check Answers\" බොත්තම ඔබන්න. වැරදි පිළිතුරු හා හිස්තැන් සහිත කොටු රතු පාටින් පෙන්වනු ඇත.\n\n
        පිළිතුරු සියල්ලම නිවැරදි නම් ඊලග අදියරය විවෘත වේ.\n\n
        ඔබට යම් ගැටළුවක් තිබේ නම් පහත ඊ මේල් ලිපිනයට පණිවිඩයක් යොමු කරන්න.\n\n

    </string>
    <string name="contact_email">www.haritha3h@gmail.com</string>

    <!--    Level completed dialog box    -->
    <string name="string_greeting">🏆Congratulations!🏆</string>
    <string name="string_menu">Menu</string>
    <string name="next_level_unlocked">Next level unlocked!</string>


    <!--    about page  -->
    <string name="about_string">Sinhala Crossword Puzzle App</string>
    <string name="content_description_logo">Sinhala Crossword Puzzle App logo</string>
    <string name="about_developer_info">Developed by Haritha Hulangamuwa.\n2024</string>
    <string name="privacy_policy">Privacy Policy</string>


    <string name="instructions_for_wrong_answers">
        කොටු සියල්ලම පුරවන්න.
    </string>

</resources>