<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold"
    android:orientation="vertical"
    tools:context=".InfoActivity">

    <LinearLayout
        android:id="@+id/about_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/about_string"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/content_description_logo" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            tools:text="App Version 1.1.0" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:text="@string/about_developer_info"/>
        <TextView
            android:id="@+id/privacy_policy_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:textColor="@color/light_blue"
            android:textStyle="bold"
            android:text="@string/privacy_policy"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/instructions_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            android:id="@+id/info_topic"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/dark_blue"
            android:gravity="center"
            android:text="@string/help_topic_string"
            android:textColor="@color/gold"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/how_to_description"
                    android:textColor="@color/dark_blue"
                    android:textIsSelectable="true"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:gravity="center"
                    android:text="@string/contact_email"
                    android:textColorLink="@color/light_blue"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>



</LinearLayout>